add new website from server na

--- a/xem-phim-bo/nam-ngoc-khanh-tam/index.html
+++ b/xem-phim-bo/nam-ngoc-khanh-tam/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1681,18 +1681,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sachertorte" title="Sachertorte">
+          <a class="list-top-movie-link" href="/phim-moi/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay" title="Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sachertorte-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tinh-yeu-khong-co-loi-loi-do-nguoi-da-doi-thay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sachertorte
+             Tình Yêu Không Có Lỗi, Lỗi Do Người Đã Đổi Thay
             </span>
             <span class="list-top-movie-item-en">
-             Sachertorte
+             Club Friday - The Series 6: Changed
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-nang-tinh-nghich" title="Cô Nàng Tinh Nghịch">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-nang-tinh-nghich-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cô Nàng Tinh Nghịch
+            </span>
+            <span class="list-top-movie-item-en">
+             Frivolous Lola
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1703,18 +1725,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/as-one" title="As One">
+          <a class="list-top-movie-link" href="/phim-moi/qua-ot-va-qua-ca" title="Quả Ớt Và Quả Cà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/as-one-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/qua-ot-va-qua-ca-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             As One
+             Quả Ớt Và Quả Cà
             </span>
             <span class="list-top-movie-item-en">
-             As One
+             헌고추, 새가지
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/buoi-khieu-vu-41" title="Buổi khiêu vũ 41">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/buoi-khieu-vu-41-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Buổi khiêu vũ 41
+            </span>
+            <span class="list-top-movie-item-en">
+             Dance of the Forty One
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1725,65 +1769,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tien-tri" title="Tiên Tri">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tien-tri-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tiên Tri
-            </span>
-            <span class="list-top-movie-item-en">
-             Prescient
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phan-xanh" title="Phấn Xanh">
+          <a class="list-top-movie-link" href="/phim-moi/thien-nu-u-hon" title="Thiện Nữ U Hồn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phan-xanh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-nu-u-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phấn Xanh
+             Thiện Nữ U Hồn
             </span>
             <span class="list-top-movie-item-en">
-             Powder Blue
+             A Chinese Ghost Story
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-second-woman" title="The Second Woman">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-second-woman-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             The Second Woman
-            </span>
-            <span class="list-top-movie-item-en">
-             The Second Woman
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
