add new website from server na

--- a/xem-phim-moi/monkey-man-bao-thu/index.html
+++ b/xem-phim-moi/monkey-man-bao-thu/index.html
@@ -1203,7 +1203,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1793,18 +1793,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-buoi-sang-viet-nam" title="Chào Buổi Sáng, Việt Nam">
+          <a class="list-top-movie-link" href="/phim-moi/vong-xuyen-tu" title="Vong Xuyên Tự">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-buoi-sang-viet-nam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-xuyen-tu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chào Buổi Sáng, Việt Nam
+             Vong Xuyên Tự
             </span>
             <span class="list-top-movie-item-en">
-             Good Morning, Vietnam
+             Don't Forget My Love
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chan-troi-do-phan-2" title="Chân trời đỏ (Phần 2)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chan-troi-do-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chân trời đỏ (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Sky Rojo (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1815,18 +1837,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thung-lung-silicon-phan-4" title="Thung Lũng Silicon (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/hi-quyen-thuong-lac-thanh" title="Hỉ Quyển Thường Lạc Thành">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thung-lung-silicon-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hi-quyen-thuong-lac-thanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thung Lũng Silicon (Phần 4)
+             Hỉ Quyển Thường Lạc Thành
             </span>
             <span class="list-top-movie-item-en">
-             Silicon Valley (Season 4)
+             The Happy Seven in Changan
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1837,21 +1859,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cong-to-vien-lach-luat" title="Công Tố Viên Lách Luật">
+          <a class="list-top-movie-link" href="/phim-moi/tan-van-cong-truyen-ky" title="Tấn Văn Công Truyền Kỳ">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cong-to-vien-lach-luat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tan-van-cong-truyen-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Công Tố Viên Lách Luật
+             Tấn Văn Công Truyền Kỳ
             </span>
             <span class="list-top-movie-item-en">
-             Bad Prosecutor
+             Tấn Văn Công Truyền Kỳ
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1859,43 +1881,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhen-mong-to" title="Nhện Mông To">
+          <a class="list-top-movie-link" href="/phim-moi/that-lac" title="Thất lạc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhen-mong-to-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/that-lac-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhện Mông To
+             Thất lạc
             </span>
             <span class="list-top-movie-item-en">
-             Big Ass Spider!
+             LOST
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dua-con-cua-chucky" title="Đứa con của Chucky">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dua-con-cua-chucky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đứa con của Chucky
-            </span>
-            <span class="list-top-movie-item-en">
-             Seed of Chucky
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
