add new website from server na

--- a/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
+++ b/xem-phim-bo/loi-noi-doi-khong-the-cuong-lai/index.html
@@ -1183,7 +1183,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             1
+             2
             </dd>
             <br/>
            </dl>
@@ -1653,18 +1653,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/kemono-jihen" title="Kemono Jihen">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-con-cho-dia-nguc" title="Những Con Chó Địa Ngục">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/kemono-jihen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-con-cho-dia-nguc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Kemono Jihen
+             Những Con Chó Địa Ngục
             </span>
             <span class="list-top-movie-item-en">
-             Kemono Jihen
+             Hell Dogs
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/co-dau-toc-xam" title="Cô dâu tóc xám">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-dau-toc-xam-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Cô dâu tóc xám
+            </span>
+            <span class="list-top-movie-item-en">
+             the Grey Hair Bride
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dai-nhac-hoi-roi" title="Đại nhạc hội rối">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-nhac-hoi-roi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đại nhạc hội rối
+            </span>
+            <span class="list-top-movie-item-en">
+             The Muppets
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1675,18 +1719,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-mau" title="Người Mẫu">
+          <a class="list-top-movie-link" href="/phim-moi/dau-tri" title="Đấu Trí">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-mau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dau-tri-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Mẫu
+             Đấu Trí
             </span>
             <span class="list-top-movie-item-en">
-             About Cherry
+             Michael Clayton
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1697,62 +1741,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phi-vu-trieu-do-tu-tokyo-den-berlin" title="Phi vụ triệu đô: Từ Tokyo đến Berlin">
+          <a class="list-top-movie-link" href="/phim-moi/duong-ba-ho-thau-thien-hoan-nhat" title="Đường Bá Hổ: Thâu Thiên Hoán Nhật">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-vu-trieu-do-tu-tokyo-den-berlin-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/duong-ba-ho-thau-thien-hoan-nhat-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phi vụ triệu đô: Từ Tokyo đến Berlin
+             Đường Bá Hổ: Thâu Thiên Hoán Nhật
             </span>
             <span class="list-top-movie-item-en">
-             Money Heist: From Tokyo to Berlin
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tang-dia-nguc-thu-chin" title="Tầng Địa Ngục Thứ Chín">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tang-dia-nguc-thu-chin-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Tầng Địa Ngục Thứ Chín
-            </span>
-            <span class="list-top-movie-item-en">
-             The Ninth Gate
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-ba-noi-tro-kieu-my-phan-6" title="Những Bà Nội Trợ Kiểu Mỹ (Phần 6)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-ba-noi-tro-kieu-my-phan-6-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những Bà Nội Trợ Kiểu Mỹ (Phần 6)
-            </span>
-            <span class="list-top-movie-item-en">
-             Desperate Housewives (Season 6)
+             The Story of Tangbohu
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
