add new website from server na

--- a/xem-phim-bo/co-vo-tieu-tien-cua-cong-tu-da-toc/index.html
+++ b/xem-phim-bo/co-vo-tieu-tien-cua-cong-tu-da-toc/index.html
@@ -1193,7 +1193,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1696,40 +1696,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mat-day-phan-5" title="Mặt Dày (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/nam-dem-kinh-hoang" title="Năm Đêm Kinh Hoàng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mat-day-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nam-dem-kinh-hoang-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mặt Dày (Phần 5)
+             Năm Đêm Kinh Hoàng
             </span>
             <span class="list-top-movie-item-en">
-             Shameless (Season 5)
-            </span>
-            <span class="list-top-movie-item-view">
-             4 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lieu-phap-su-that" title="Liệu Pháp Sự Thật">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/shrinking-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Liệu Pháp Sự Thật
-            </span>
-            <span class="list-top-movie-item-en">
-             Shrinking
+             Five Nights at Freddy's
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1740,18 +1718,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-chong-quoc-dan" title="Ông chồng quốc dân">
+          <a class="list-top-movie-link" href="/phim-moi/romeo-phai-chet" title="Romeo Phải Chết">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-chong-quoc-dan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/romeo-phai-chet-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ông chồng quốc dân
+             Romeo Phải Chết
             </span>
             <span class="list-top-movie-item-en">
-             Pretty Man
+             Romeo Must Die
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1762,18 +1740,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-dai-tai-phan-4" title="Thám Tử Đại Tài (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/co-ay-chang-qua-khong-muon-thua" title="Cô Ấy Chẳng Qua Không Muốn Thua">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-dai-tai-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/co-ay-chang-qua-khong-muon-thua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Đại Tài (Phần 4)
+             Cô Ấy Chẳng Qua Không Muốn Thua
             </span>
             <span class="list-top-movie-item-en">
-             The Mentalist (Season 4)
+             Stand or Fall
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1784,21 +1762,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/am-anh-o-connecticut-2-bong-ma-cua-georgia" title="Ám Ảnh Ở Connecticut 2: Bóng Ma Của Georgia">
+          <a class="list-top-movie-link" href="/phim-moi/toi-nhan-vo-dinh" title="Tội nhân vô định">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/am-anh-o-connecticut-2-bong-ma-cua-georgia-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-nhan-vo-dinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ám Ảnh Ở Connecticut 2: Bóng Ma Của Georgia
+             Tội nhân vô định
             </span>
             <span class="list-top-movie-item-en">
-             The Haunting in Connecticut 2: Ghosts of Georgia
+             Nowhere Man
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nha-tien-tri" title="Nhà Tiên Tri">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-tien-tri-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nhà Tiên Tri
+            </span>
+            <span class="list-top-movie-item-en">
+             A Prophet
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
